// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CLI regression — output structure snapshots > \`mneme --help\` snapshot 1`] = `
"Usage: mneme [options] [command]

μνήμη — the memory layer of your codebase. Knows the WHY, the WHAT, the
WHERE-IT-BREAKS.

Options:
  -V, --version  >  output the version number
  --compliance <profile>  >  Cryptographic compliance profile (none | fips140). Refuses to start if profile not satisfied. (default: "none")
  -h, --help  >  display help for command

Commands:
  adversarial [options]  >  Meta-evaluate any AI client — Mneme generates probes mixing real history with subtle + wholesale lies; you paste them into your AI; we compute a trust grade based on which contradictions the AI catches.
  audit [options]  >  AI Session Audit — every AI-driven commit gets a trust certificate (vendor-neutral; works with any AI tool whose commits end up in \`git log\`)
  bot [options]  >  Auto-comment Mneme audit + atrophy + ghost results on PRs / MRs (GitHub · GitLab · Bitbucket — auto-detects CI environment).
  atrophy [options] [author]  >  Knowledge half-life clock — Ebbinghaus forgetting curve over (author × file) pairs. Shows who still remembers what, and where ghost-code risk is concentrated. Pass an author email to drill in, --file <path> for a per-file view.
  telepathy [options]  >  Latent collaboration network — pairs of authors who never co-author a commit but whose changes rhyme (Alice edits one part of a topic; Bob edits the other within hours; pattern repeats). Surfaces invisible teams that GitHub can't see.
  influence [options]  >  Cultural-alpha ranking — who writes the patterns everyone else copies (volume-independent: a 5-commit pattern-setter outranks a 500-commit copy-paster; analyzes TypeScript / JavaScript / Python / Go)
  lineage [options] <target>  >  Semantic ownership of code over time — whose interpretation of whose intent currently lives in this code (NOT git blame; use for review assignment + onboarding, NOT performance reviews). Pass a file path or file:funcName.
  nemesis [options]  >  Engineering friction detector — pairs of authors who consistently revert/rewrite each other's work (use for team formation, NOT performance reviews)
  nervous-system [options]  >  Mneme Nervous System — combined people-analytics report (cultural alphas + latent teams + atrophy heatmap + brain lobes + mini-passports). Terminal-renderable; --html / --pdf for the printable dossier.
  passport [options] [author]  >  Engineer passport — DNA + expertise + telepathic teammates + influence + atrophy in one dossier. Pass an author email or omit to auto-pick the top contributor.
  promise [options]  >  Promise-debt tracker — every "I'll fix later" / TODO / follow-up parsed into a ledger and verified against history (heuristic; treat as a starting list)
  karma [options]  >  TODO/FIXME debt ledger — every TODO added is a debit, every one removed is a credit. Open balance compounds with age.
  cognitive-twin|twin [options] <email>  >  Author-voice fingerprint — stylometric profile of how a contributor writes commits. Optional --rewrite '<subject>' rewrites in their voice. (Heuristic, no LLM.)
  heartbeat [options]  >  Codebase pulse — 20-axis MRI snapshot vs rolling 7-day baseline; flag any axis ≥ 2σ. Cron daily for continuous health observation. (v0.43 Holy Grail #1.)
  rewind [options] <ref>  >  Time-travel debug — reconstruct the working context of a single commit (surrounding commits, time-of-day, voice deviation, sandwich-mode markers). ✱ inferences are speculative. (v0.43 Holy Grail #2.)
  dna-fold [options]  >  Fold individual author DNAs into a team-DNA. Surfaces consensus / polarised / outliered features across the team. (v0.43 Holy Grail #3.)
  library|lib [options]  >  Manage the per-repo molecule library (.mneme/library.json) — the v0.42 Second-Brain. List entries, promote frequent plans to named aliases, annotate, prune.
  run [options] <alias-or-id>  >  Execute a molecule plan from the library by alias or 16-char id. Default --dry-run; pass --execute to actually run. Use --forbid-* flags for sandboxed runs.
  compose [options] <intent...>  >  Compile a natural-language intent into a runnable pipeline of registered atoms / molecules. v0.41 plans, v0.42 also feeds the library. See Wiki: Compose-And-Compiler.
  periodic-table|table [options] [id]  >  Browse Mneme's Element/Atom/Molecule catalog. Pass an id (e.g. \`mneme periodic-table git.log\`) for full detail. v0.40 MVP — see Wiki: Periodic-Table.
  groups [options]  >  Browse Mneme's 40+ commands grouped by intent (security / people / history / memory / originals).
  deps  >  Dependency-level security commands (OSV.dev / CVE / GHSA cross-reference).
  suppress [options] [id]  >  Suppress a vulnerability finding by id (.mneme/suppressions.json). Pass --list to see all, --remove to remove.
  show [options] <id>  >  Print full context for a vulnerability finding by its 8-char id (commit + diff + posterior breakdown + suggested actions).
  repo-mri|mri [options]  >  Repo MRI — 20-axis health diagnostic with z-scores against typical OSS repos. The fast 'what's weird about this repo' answer.
  completion <shell>  >  Print a shell-completion script for bash, zsh, fish, or powershell. Pipe to your completion file to enable tab-completion across every Mneme command.
  do [options] <query...>  >  Smart dispatcher — describe what you want, Mneme picks tools and runs them ('do find security issues' / 'do is the codebase healthy')
  htc-build [options]  >  Compress every commit + cluster + memoir into LLM-ready cache (10× smaller, paid once, free LLM ladder auto-detected)
  htc-stats [options]  >  Inspect HTC coverage + compression ratio (raw vs cached tokens)
  upgrade [options]  >  Update Mneme to latest — bypasses npm cache + diagnoses PATH conflicts (more reliable than \`npm install -g mneme-ai@latest\`)
  setup-free  >  30-second guided setup for full Q&A synthesis without paying — Ollama / Groq / OpenRouter free paths
  guard [options]  >  Pre-commit hook — auto-runs anomaly + vuln + secret-redaction checks on every commit (install once, forget it exists)
  init [options]  >  Initialize Mneme in the current repo (probes environment to recommend the best embedder)
  index [options]  >  Index commits, PRs, and embeddings — or analyze the existing index
  ask [options] <question...>  >  Ask the memory: "why does payment.ts use try/catch?"
  why [options] <target>  >  Why does this exist? Pass file:line, file:start-end, or just file
  status  >  Show memory + repo status
  doctor [options]  >  Probe the environment (Ollama, OpenAI, hardware), check Mneme version against npm registry, and recommend next steps
  counterfactual [options] <author-email>  >  Bayesian what-if simulation — drop one author's commits and re-compute atrophy + telepathy. Surfaces which files lose their last live expert and which latent pairs disappear. Bayesian, NOT a prediction; never use to evaluate a real person.
  org [options] [args...]  >  Cross-repo nervous system — register multiple repos under one org, then run telepathy + atrophy across all of them. Subcommands: init <name> | add <name> <path> | remove <name> <path> | list | status [name] | delete <name>. Default (no subcommand) runs cross-repo analysis on the first registered org.
  dashboard [options]  >  Open the Mneme Web Dashboard for the current repo (local-first; no upload).
  mcp [options]  >  Run as an MCP server, OR --install to auto-config Claude Code / Cursor / Continue
  webhook [options] <action>  >  Outgoing webhooks: add · list · remove · test · fire (events: audit.fail · forensics.cwe.high · atrophy.spike · court.guilty · federation.match)
  session [options] <action>  >  Persistent cross-AI session: save · resume · list · remove. Context follows you across Claude Code / Cursor / ChatGPT / Codex.
  constitution [options]  >  Synthesize the repo's living constitution (regret patterns · atrophy pairing · forensics rules · ADRs). AI tools auto-prepend via mneme.constitution.get MCP tool.
  ecosystem [options]  >  Dynamic MCP — detect ecosystems in your repo (Stripe, React, Postgres, etc.) and show which ecosystem-specific tools Mneme will spawn for this repo.
  bench [options]  >  AI-Memory-Bench — the first reproducible benchmark for 'AI memory layers'. Emit probes, score AI answers, render leaderboard.
  security [options] [action]  >  Security dashboard: status (default) · on · off · verify. Shows audit log, model checksums (TOFU), scrubber, and FIPS posture in one screen.
  audit-log [options] <action>  >  HMAC-SHA-256 tamper-evident audit log: enable · disable · status · verify · rotate · show. Compliance-grade (SOC2 / PCI-DSS / banking).
  key [options] <action>  >  Cryptographic key management: rotate (re-sign HMAC audit chain under fresh secret).
  learn [options] <action>  >  Self-learning engine: tick (run a learning cycle now) · status (show learned-state + audit trail)
  adapter [options] <vendor>  >  Export Mneme's tool catalog as OpenAI / Anthropic / Gemini / MCP function-calling format
  benchmark [options]  >  Run the vendor-neutral AI Memory Benchmark — grades any AI memory implementation across 24 standardized probes
  time-capsule [options]  >  Export a single-tarball snapshot of the repo's nervous system for handovers / new-hire onboarding
  daemon [options] <action>  >  Mneme daemon — background process that watches git activity + auto-reindexes
  court [options] [commit]  >  Mneme Court — 12-jury arbitration with cryptographic ruling PDF (preview, full implementation in v1.7.0)
  federation [options] <action>  >  Cross-repo Wisdom Federation — DP/k-anonymity signed signals (join · leave · status · contribute · query)
  git-install [options]  >  Install Mneme as a native git extension — enables \`git mneme <cmd>\` + optional hooks
  watch [options]  >  Wisdom Mutant — 24/7 daemon: re-index on commit, calibrate hourly, self-eval daily
  time-machine [options] <file>  >  Narrate a file's evolution as eras (birth, rewrite, firefight, plateau)
  premortem [options] <intent...>  >  Predict regret risk for a proposed change, grounded in your repo's failure history
  ghost [options]  >  Surface ghost code — half-finished features, stale TODOs, files born and forgotten
  dna [options] [author]  >  Extract Codebase DNA — a portable fingerprint of a contributor's style, hours, and file affinity
  drift [options]  >  Visualize topical drift — features → refactors → firefights → polish over time
  chronicle [options]  >  Auto-generate a chaptered narrative documentary of your codebase
  oracle [options]  >  Predict next-window co-edits and surface likely author collisions on the same file
  constellation [options]  >  Build a graph view of the repo — files as stars, authors as orbitals, commits as edges
  forensics  >  Applied forensic science for code: STR-loci attribution, vulnerability hunt, anomaly detection
  guardian [options]  >  24/7 self-healing engine — diagnose weaknesses + auto-fix safe actions
  cluster [options]  >  Semantic clustering of commit messages — find topic islands across history
  network [options]  >  Author network — semantic collaboration graph with co-edit + co-time + co-topic edges
  manage [options]  >  Engineering management dashboard — health, succession, skill matrix, trajectory
  export-bundle|bundle [options]  >  Export the universal bundle — DNA + drift + chronicle + oracle + constellation + clusters + network + manage + ghost
  advanced [options]  >  Show advanced commands grouped by phase (hidden from main --help)
  whats-new|wn [options]  >  Show curated highlights of what's new in this Mneme version (mirrors mneme.whats_new MCP tool).
  welcome [options]  >  Show the install handoff: what's auto-enabled + how to opt out (mirror of mneme.welcome MCP tool).
  spore  >  Cross-machine lineage sync (git-backed).
  lin  >  MneMeiosis Lineage — session inheritance across AI agents and machines.
  nucleus  >  Infinity Wisdom Brain — persistent loop that grows DNA across sessions.
  inbox  >  Mneme's force-push channel — daemon + version-check + achievement notices waiting to surface to the user.
  compliance  >  AI Compliance audit — who executed which AUTO-ACTION mandate (pulse pre-executor / daemon-queue / ai-agent).
  companion  >  MNEME COMPANION PROTOCOL — soul · consent · pheromone · contract · template surface for the active AI vendor.
  soul  >  Shortcut for \`mneme companion soul\` — your AI's per-vendor diary (commitments kept/broken).
  consent  >  Shortcut for \`mneme companion consent\` — view / renew / revoke your repo's Mneme consent grant.
  greet [options]  >  AI handshake — let Mneme know which AI vendor is active in this session (so Soul Mirror tracks CLI-only activity, not just MCP).
  powers  >  The 9 Powers — Mneme's permanence engine. Status, gravity, manifesto, capsule, war-game, treasury, scenarios.
  cloud  >  Smart Cloud Connectivity — probe / queue / drain. Local-first; cloud is OPTIONAL relay (vaccine CDN, federated PRECOG, compliance scoreboard).
  pharmacopoeia|phr  >  Vaccine CDN auto-distribution (Demon Stage 1.1) — pull + atomically swap pharmacopoeia bundle from a public/private CDN.
  parasite  >  Parasite bridge installer (Demon Stage 1.2) — inject Mneme bridge into other AI tools' configs (Cursor / Continue / Aider / Codex / Gemini / Windsurf / Claude Code project). Always sentinel-bracketed + reversible.
  aletheia  >  Vendor reputation scoring (Demon Stage 1.3) — composite trust score per AI vendor, computed from local compliance / karma / advocate / autoaction. Badge SVG ready for README embeds.
  teeth  >  DEMON STAGE 2 — bug-bounty harvester, ransom-proof vault, stake-weighted genome marketplace.
  wings  >  DEMON STAGE 3 — continuous shipper, vendor arbitrage router, synthetic adversarial army.
  godmode  >  DEMON STAGE 4 — Mneme OS supervisor, compliance reporter, dead-vendor planner.
  avatar  >  DEMON STAGE 5 — gossip mesh, vendor-neutral lingua stream, replicating-wisdom transfer.
  antivirus|av  >  Antivirus -- scan AI drafts for hallucination strains + run the vaccine lab.
  uninstall [options]  >  Remove EVERY Mneme artifact from this machine: stop daemon, remove OS service, remove agent hooks, remove auto-boot marker. (Pass --purge to also wipe .mneme/ in this repo; --npm to also \`npm uninstall -g\`.)
  embeddings|emb  >  Inspect + upgrade the memory-layer embedder. \`status\` shows which tier is active with a real similarity test; \`upgrade\` pre-downloads the bundled MiniLM model so the next \`mneme index\` runs on real semantic embeddings.
  supernova|sn  >  Inspect + manage the SUPERNOVA self-heal supervisor (v1.29.0+). Shows per-cycle restart attempts, escalations, and lets you clear stuck-escalated cycles.
  manifest  >  Sync the Mneme AGENT COMMAND MANIFEST into every agent file (CLAUDE.md, AGENTS.md, .cursor/rules, GEMINI.md, .windsurfrules) so the AI agent in your editor always knows the latest command surface.
  trust  >  Per-subsystem calibration grade (precision/recall/F1 + band). Honest about which Mneme subsystem deserves trust + which should be cross-checked with Semgrep / Cursor / Claude Code.
  nuclear  >  MNEME WISDOM REACTOR readout. Five real nuclear-physics formulas mapped to Mneme metrics: wisdom yield (E=mc² mass defect), atrophy half-life (radioactive decay), EVOLVE patch energy (reaction Q), RAG cluster radius, user-engagement criticality (k-factor).
  overnight  >  Run a goal-driven multi-round transformation while you sleep. Inspired by ARIS but free-path-first: 6-quark jury (one Ollama model, six personas) reviews each round; NUCLEAR FUSION verdict bands; auto-stops on reject-streak / negative-Q-streak / budget exhaust. Wakes you up to a morning report at .mneme/overnight/<id>/REPORT.md.
  retrieval|rl  >  Retrieval Lab -- self-tuning retrieval config (UCB1 over candidate arms).
  hooks|integrate  >  Wire Mneme into your AI tool(s). Supports Claude Code (real hook), Cursor, Codex, Gemini, Windsurf, and project AGENTS.md.
  notify  >  Multi-channel outbound notifications (OS toast, TTS, mobile push, email, agent files).
  agent  >  Mneme autonomous background agent (Ollama local / paid API fallback).
  selfcheck|recheck  >  Recurring self-recheck loop: 12 checks against Mneme's own state.
  quantum  >  Why Mneme doesn't need quantum (yet) -- educational easter egg.
  precog|precognition  >  MNEME PRECOG -- Markov + ACO pheromone + dream-loop precognition cache for AI tool sequences (world-first for MCP).
  evolve  >  MNEME EVOLVE -- self-modifying NUCLEUS. Reads local telemetry, proposes markdown PR patches to Mneme itself. Never auto-merges.
  genome-pool  >  Mneme Genome Pool MVP -- opt-in PII-scrubbed chromosome contributor.
  stigmergy|hive [options]  >  MNEME STIGMERGY HIVE -- emergent dev-collaboration detection from git traces alone (no chat logs needed). Finds pairs who effectively work together without ever talking.
  chimera [options]  >  MNEME CHIMERA -- single-author insight synthesizer for solo repos. Surfaces time-of-day fingerprint + area diversity + velocity + topic momentum + phantom-collaborator suggestions even when other commands degenerate.
  tools [options]  >  List Mneme's MCP tool catalog (default ALL 172). Pass --curated for the 20-tool starter set.
  squad [options] <claim...>  >  Bot Squadron — spawn 6 specialized sub-agents to investigate ONE claim from 6 angles, then run the v1.39 DEVIL'S ADVOCATE + EVIDENCE QUORUM aggregator + v1.51 ACGV (Chandrasekhar/Neutrino/Godel/Confession/Vaccine/Stake) on top so the verdict is bias-aware AND repo-grounded. Example: \`mneme squad "the auth refactor in v1.42 introduced a regression"\`
  health [options]  >  Single-screen health: version + lineage state + nucleus streaks.
  demo [options]  >  Showcase Mneme's wow-features in 60 seconds — synthesizes seed lineage + ticks nucleus + spawns bot squadron + shows DNA evolution.
  verify [options] <claim...>  >  Fast truth-check on a claim. Plain-English verdict (TRUSTWORTHY / MIXED / REFUTED / IMPOSSIBLE) anchored to the ACGV pipeline. Pass --explain for the math; --json for machine output.
  autoboot  >  Phoenix Resurrection Protocol -- install / uninstall / status of the cross-platform auto-boot mechanisms. Arms Plan 1/2/3 simultaneously so the daemon resurrects after every reboot regardless of which mechanism is blocked by the host.
  sovereign  >  Sovereignty Kernel -- Mneme answers questions about THIS repo using local Ollama + ACGV grounding gate. Free-first: no API key, no cloud, no source code leaves the laptop. v1.57.0.
  covenant  >  Tier 2 -- HMAC-signed bilateral contract between user + AI vendor. Mneme enforces; Aletheia compliance score moves over time.
  grade  >  Mneme grade family — 1 action(s). Run \`mneme grade --help\` for actions, or \`mneme grade <action> --json '{...}'\` to invoke.
  truth  >  Mneme truth family — 2 action(s). Run \`mneme truth --help\` for actions, or \`mneme truth <action> --json '{...}'\` to invoke.
  whisper  >  Mneme whisper family — 3 action(s). Run \`mneme whisper --help\` for actions, or \`mneme whisper <action> --json '{...}'\` to invoke.
  time  >  Mneme time family — 2 action(s). Run \`mneme time --help\` for actions, or \`mneme time <action> --json '{...}'\` to invoke.
  interview  >  Mneme interview family — 1 action(s). Run \`mneme interview --help\` for actions, or \`mneme interview <action> --json '{...}'\` to invoke.
  audience  >  Mneme audience family — 1 action(s). Run \`mneme audience --help\` for actions, or \`mneme audience <action> --json '{...}'\` to invoke.
  alien  >  Mneme alien family — 1 action(s). Run \`mneme alien --help\` for actions, or \`mneme alien <action> --json '{...}'\` to invoke.
  carbon  >  Mneme carbon family — 1 action(s). Run \`mneme carbon --help\` for actions, or \`mneme carbon <action> --json '{...}'\` to invoke.
  consensus  >  Mneme consensus family — 4 action(s). Run \`mneme consensus --help\` for actions, or \`mneme consensus <action> --json '{...}'\` to invoke.
  reasoning  >  Mneme reasoning family — 1 action(s). Run \`mneme reasoning --help\` for actions, or \`mneme reasoning <action> --json '{...}'\` to invoke.
  game  >  Mneme game family — 1 action(s). Run \`mneme game --help\` for actions, or \`mneme game <action> --json '{...}'\` to invoke.
  teacher  >  Mneme teacher family — 2 action(s). Run \`mneme teacher --help\` for actions, or \`mneme teacher <action> --json '{...}'\` to invoke.
  tom  >  Mneme tom family — 2 action(s). Run \`mneme tom --help\` for actions, or \`mneme tom <action> --json '{...}'\` to invoke.
  tot  >  Mneme tot family — 1 action(s). Run \`mneme tot --help\` for actions, or \`mneme tot <action> --json '{...}'\` to invoke.
  curiosity  >  Mneme curiosity family — 1 action(s). Run \`mneme curiosity --help\` for actions, or \`mneme curiosity <action> --json '{...}'\` to invoke.
  consolidate  >  Mneme consolidate family — 1 action(s). Run \`mneme consolidate --help\` for actions, or \`mneme consolidate <action> --json '{...}'\` to invoke.
  cf  >  Mneme cf family — 2 action(s). Run \`mneme cf --help\` for actions, or \`mneme cf <action> --json '{...}'\` to invoke.
  debate  >  Mneme debate family — 1 action(s). Run \`mneme debate --help\` for actions, or \`mneme debate <action> --json '{...}'\` to invoke.
  atom  >  Mneme atom family — 2 action(s). Run \`mneme atom --help\` for actions, or \`mneme atom <action> --json '{...}'\` to invoke.
  apoptosis  >  Mneme apoptosis family — 5 action(s). Run \`mneme apoptosis --help\` for actions, or \`mneme apoptosis <action> --json '{...}'\` to invoke.
  power  >  Mneme power family — 2 action(s). Run \`mneme power --help\` for actions, or \`mneme power <action> --json '{...}'\` to invoke.
  embedder  >  Mneme embedder family — 3 action(s). Run \`mneme embedder --help\` for actions, or \`mneme embedder <action> --json '{...}'\` to invoke.
  autarchy  >  Mneme autarchy family — 1 action(s). Run \`mneme autarchy --help\` for actions, or \`mneme autarchy <action> --json '{...}'\` to invoke.
  aegis  >  Mneme aegis family — 4 action(s). Run \`mneme aegis --help\` for actions, or \`mneme aegis <action> --json '{...}'\` to invoke.
  ascension  >  Mneme ascension family — 3 action(s). Run \`mneme ascension --help\` for actions, or \`mneme ascension <action> --json '{...}'\` to invoke.
  hyperscan  >  Mneme hyperscan family — 5 action(s). Run \`mneme hyperscan --help\` for actions, or \`mneme hyperscan <action> --json '{...}'\` to invoke.
  sentinel  >  Mneme sentinel family — 3 action(s). Run \`mneme sentinel --help\` for actions, or \`mneme sentinel <action> --json '{...}'\` to invoke.
  diaspora  >  Mneme diaspora family — 2 action(s). Run \`mneme diaspora --help\` for actions, or \`mneme diaspora <action> --json '{...}'\` to invoke.
  genesplice  >  Mneme genesplice family — 3 action(s). Run \`mneme genesplice --help\` for actions, or \`mneme genesplice <action> --json '{...}'\` to invoke.
  permeate  >  Mneme permeate family — 4 action(s). Run \`mneme permeate --help\` for actions, or \`mneme permeate <action> --json '{...}'\` to invoke.
  seamless  >  Mneme seamless family — 3 action(s). Run \`mneme seamless --help\` for actions, or \`mneme seamless <action> --json '{...}'\` to invoke.
  lattice  >  Mneme lattice family — 3 action(s). Run \`mneme lattice --help\` for actions, or \`mneme lattice <action> --json '{...}'\` to invoke.
  neuron  >  Mneme neuron family — 2 action(s). Run \`mneme neuron --help\` for actions, or \`mneme neuron <action> --json '{...}'\` to invoke.
  conduit  >  Mneme conduit family — 5 action(s). Run \`mneme conduit --help\` for actions, or \`mneme conduit <action> --json '{...}'\` to invoke.
  synapse  >  Mneme synapse family — 5 action(s). Run \`mneme synapse --help\` for actions, or \`mneme synapse <action> --json '{...}'\` to invoke.
  osmosis  >  Mneme osmosis family — 4 action(s). Run \`mneme osmosis --help\` for actions, or \`mneme osmosis <action> --json '{...}'\` to invoke.
  aura  >  Mneme aura family — 2 action(s). Run \`mneme aura --help\` for actions, or \`mneme aura <action> --json '{...}'\` to invoke.
  relay  >  Mneme relay family — 2 action(s). Run \`mneme relay --help\` for actions, or \`mneme relay <action> --json '{...}'\` to invoke.
  chameleon  >  Mneme chameleon family — 4 action(s). Run \`mneme chameleon --help\` for actions, or \`mneme chameleon <action> --json '{...}'\` to invoke.
  anchor  >  Mneme anchor family — 3 action(s). Run \`mneme anchor --help\` for actions, or \`mneme anchor <action> --json '{...}'\` to invoke.
  rainbow  >  Mneme rainbow family — 4 action(s). Run \`mneme rainbow --help\` for actions, or \`mneme rainbow <action> --json '{...}'\` to invoke.
  mutiny  >  Mneme mutiny family — 1 action(s). Run \`mneme mutiny --help\` for actions, or \`mneme mutiny <action> --json '{...}'\` to invoke.
  prophet  >  Mneme prophet family — 1 action(s). Run \`mneme prophet --help\` for actions, or \`mneme prophet <action> --json '{...}'\` to invoke.
  prophecy  >  Mneme prophecy family — 1 action(s). Run \`mneme prophecy --help\` for actions, or \`mneme prophecy <action> --json '{...}'\` to invoke.
  wisdom_shards  >  Mneme wisdom_shards family — 1 action(s). Run \`mneme wisdom_shards --help\` for actions, or \`mneme wisdom_shards <action> --json '{...}'\` to invoke.
  necromancy  >  Mneme necromancy family — 1 action(s). Run \`mneme necromancy --help\` for actions, or \`mneme necromancy <action> --json '{...}'\` to invoke.
  interstellar  >  Mneme interstellar family — 1 action(s). Run \`mneme interstellar --help\` for actions, or \`mneme interstellar <action> --json '{...}'\` to invoke.
  adversarial_twins  >  Mneme adversarial_twins family — 1 action(s). Run \`mneme adversarial_twins --help\` for actions, or \`mneme adversarial_twins <action> --json '{...}'\` to invoke.
  living_will  >  Mneme living_will family — 1 action(s). Run \`mneme living_will --help\` for actions, or \`mneme living_will <action> --json '{...}'\` to invoke.
  timeriver  >  Mneme timeriver family — 1 action(s). Run \`mneme timeriver --help\` for actions, or \`mneme timeriver <action> --json '{...}'\` to invoke.
  recursive_soul  >  Mneme recursive_soul family — 1 action(s). Run \`mneme recursive_soul --help\` for actions, or \`mneme recursive_soul <action> --json '{...}'\` to invoke.
  holy  >  Mneme holy family — 1 action(s). Run \`mneme holy --help\` for actions, or \`mneme holy <action> --json '{...}'\` to invoke.
  wormhole  >  Mneme wormhole family — 2 action(s). Run \`mneme wormhole --help\` for actions, or \`mneme wormhole <action> --json '{...}'\` to invoke.
  metron  >  Mneme metron family — 3 action(s). Run \`mneme metron --help\` for actions, or \`mneme metron <action> --json '{...}'\` to invoke.
  updates  >  Mneme updates family — 1 action(s). Run \`mneme updates --help\` for actions, or \`mneme updates <action> --json '{...}'\` to invoke.
  handoff  >  Mneme handoff family — 5 action(s). Run \`mneme handoff --help\` for actions, or \`mneme handoff <action> --json '{...}'\` to invoke.
  birthright  >  Mneme birthright family — 2 action(s). Run \`mneme birthright --help\` for actions, or \`mneme birthright <action> --json '{...}'\` to invoke.
  clone  >  Mneme clone family — 1 action(s). Run \`mneme clone --help\` for actions, or \`mneme clone <action> --json '{...}'\` to invoke.
  beacon  >  Mneme beacon family — 2 action(s). Run \`mneme beacon --help\` for actions, or \`mneme beacon <action> --json '{...}'\` to invoke.
  stargate  >  Mneme stargate family — 1 action(s). Run \`mneme stargate --help\` for actions, or \`mneme stargate <action> --json '{...}'\` to invoke.
  cosmic  >  Mneme cosmic family — 7 action(s). Run \`mneme cosmic --help\` for actions, or \`mneme cosmic <action> --json '{...}'\` to invoke.
  bounty  >  Mneme bounty family — 3 action(s). Run \`mneme bounty --help\` for actions, or \`mneme bounty <action> --json '{...}'\` to invoke.
  replica  >  Mneme replica family — 2 action(s). Run \`mneme replica --help\` for actions, or \`mneme replica <action> --json '{...}'\` to invoke.
  infra  >  Mneme infra family — 3 action(s). Run \`mneme infra --help\` for actions, or \`mneme infra <action> --json '{...}'\` to invoke.
  genesis  >  Mneme genesis family — 3 action(s). Run \`mneme genesis --help\` for actions, or \`mneme genesis <action> --json '{...}'\` to invoke.
  help [command]  >  display help for command

Advanced commands (Phase 2/3/4 + WILD ideas) are hidden from this help.
Run \`mneme advanced\` to see them.

"
`;

exports[`CLI regression — output structure snapshots > \`mneme advanced\` snapshot 1`] = `
"
  μνήμη  >  ·  Mneme — advanced commands
  ─────────────────────────────────────────────────────────────

  Phase 2 — semantic similarity
    entities  >  parse + embed every TS/JS/Python/Go symbol
    clones [--threshold]  >  surface near-duplicate functions

  Phase 3 — incident correlation
    correlate --source ...  >  join commits with incidents (pager / manual)
    blast <commit>  >  predict incidents likely to follow a commit
    palimpsest <file>:<line>  >  walk the causal chain of a single line
    conscience [files...]  >  risk-score a PR against history

  Wisdom Mutant Engine (Phase 4)
    feedback <id> up|down  >  record explicit feedback on a query
    calibrate  >  re-tune search knobs against feedback set

  Insights — the killer commands
    who-knows <topic>  >  verdict on who knows X (% confidence + backup + risk)
    decisions  >  auto-extract ADRs from commit messages
    stack-trace [--from F]  >  paste an error, get historical context per frame
    story <topic>  >  narrate the evolution of <topic> across acts
    dream  >  speculative ideas grounded in your patterns
    chat  >  multi-turn REPL over your repo's history

  Innovations (Sprint 4) — wisdom + world-class + uniqueness
    regret  >  commits shipped + immediately fixed/reverted (regret rate)
    bus-factor  >  files where one author owns ≥75% — fragility map
    paradox  >  architectural flip-flops (A → B → A patterns)
    commit-coach [--stdin]  >  pre-commit review: message + reviewers + warnings
    crystal-ball [--stdin]  >  predict CI/follow-up failure probability for staged diff

  Quant (Sprint 5) — Wall Street meets Git
    drawdown  >  worst losing streaks (firefighting periods)
    alpha --items F  >  Kelly-criterion allocation for technical debt
    backtest --samples F  >  validate any predictor against history
    black-swan  >  rare-but-catastrophic file patterns
    insider-trading  >  authors who fix bugs they introduced
    moneyball  >  undervalued contributors (high ROI, low LOC)
    greek  >  codebase Greeks (Δ Γ Θ) sensitivity
    correlation-matrix  >  hidden behavioral coupling between files
    implied-volatility  >  chaos predicted from commit message tone
    tax-loss-harvest  >  dead-code deletion candidates

  WILD — opinionated extras
    heal [--dry-run]  >  synthesize WHY notes for poor commit messages
    echo [--id|--query]  >  find past incidents resembling current
    runaway  >  files growing silently across many commits
    mirror  >  onboarding dossier (5 PRs, 3 people, 2 incidents)
    rumor  >  tribal phrases mentioned but never documented
    fossil  >  files deleted from HEAD but alive in history
    ledger --since ...  >  tamper-evident audit log (SOX/SOC2)
    adapt  >  mutant detector — recommend next 1-3 commands
    teach <target>  >  explain a folder/file in plain language
    genius <question>  >  multi-step LLM agent over Mneme commands

  Brand
    wisdom [-n <1..13>]  >  a meditation from the Mneme manifesto
    manifesto  >  the full canon

  Each command has its own --help with options and examples.
  Full design notes: WILD_IDEAS.md, ROADMAP.md.
"
`;

exports[`CLI regression — output structure snapshots > \`mneme ask --help\` snapshot 1`] = `
"Usage: mneme ask [options] <question...>

Ask the memory: "why does payment.ts use try/catch?"

Options:
  -k, --top-k <n>  >  number of results (default: 8)
  --json  >  machine-readable JSON output (default: false)
  --no-llm  >  skip LLM synthesis — extractive answer only
  --debug  >  show intent classification + raw scores (default:
                         false)
  --audit  >  refuse to answer below confidence floor or with
                         unverified citations (default: false)
  --audit-floor <level>  >  audit confidence floor: low | medium | high (default:
                         "medium")
  --stream  >  v0.23: emit speculative-reasoning events in real-time
                         (consider/accept/prune/verify) (default: false)
  -h, --help  >  display help for command
"
`;

exports[`CLI regression — output structure snapshots > \`mneme do --help\` snapshot 1`] = `
"Usage: mneme do [options] <query...>

Smart dispatcher — describe what you want, Mneme picks tools and runs them ('do
find security issues' / 'do is the codebase healthy')

Options:
  --json  >  structured output (default: false)
  -h, --help  >  display help for command
"
`;

exports[`CLI regression — output structure snapshots > \`mneme forensics anomaly --help\` snapshot 1`] = `
"Usage: mneme forensics anomaly [options]

Catch suspicious commits before merge (insider-threat / credential-compromise)

Options:
  --threshold <n>  >  deviation threshold to surface (0..4) (default: 0.9)
  --top <n>  >  show N findings (default: 10)
  --json  >  structured output (default: false)
  -h, --help  >  display help for command
"
`;

exports[`CLI regression — output structure snapshots > \`mneme guardian --help\` snapshot 1`] = `
"Usage: mneme guardian [options]

24/7 self-healing engine — diagnose weaknesses + auto-fix safe actions

Options:
  --watch  >  run forever, polling every --interval seconds (default:
                        false)
  --once  >  run a single pass and exit (default if --watch is
                        absent) (default: false)
  --interval <seconds>  >  poll interval in seconds (--watch only) (default: 300)
  --apply  >  actually apply auto-policy actions (otherwise
                        observe-only) (default: false)
  --max-iterations <n>  >  stop after N ticks (testing / cron-style)
  --json  >  structured JSON output (default: false)
  -h, --help  >  display help for command
"
`;

exports[`CLI regression — output structure snapshots > \`mneme htc-stats --help\` snapshot 1`] = `
"Usage: mneme htc-stats [options]

Inspect HTC coverage + compression ratio (raw vs cached tokens)

Options:
  --json  >  machine-readable output (default: false)
  -h, --help  >  display help for command
"
`;

exports[`CLI regression — output structure snapshots > \`mneme status\` structure (sections only) 1`] = `
"  ◉  Mneme Status
  ◆ Repo
  ◆ Memory
  ◆ Config"
`;

exports[`CLI regression — output structure snapshots > \`mneme wisdom -n 1\` snapshot 1`] = `
"
  ╭───────────────────────────────────────────╮
  │  meditation 1 of 13                                │
  ╰───────────────────────────────────────────╯

  On Memory and Intelligence

  An intelligence without memory is just guessing in a loop. The
  Greeks knew this — they made μνήμη the mother of the muses, not
  their student.
  Every AI assistant you use today is a Mnemosyne with amnesia.

  — Intelligence is the spark; memory is the fuel.

  see also:  >  mneme wisdom --all     ·     mneme wisdom -n <1..13>     ·     mneme manifesto
"
`;

exports[`CLI regression — output structure snapshots > unknown-command error snapshot 1`] = `
"error: unknown command 'nope-not-real'
"
`;
